--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign-Up</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="index.css" rel="stylesheet" type="text/css">
+    <script defer src="index.js"></script>
 </head>
 <body>
     <div class="main-container">
         <div class="side-bar">
-            <img id="sidebar-img" src="/Sign-Up-Form/halie-west-25xggax4bSA-unsplash.jpg" alt="">
+            <img id="sidebar-img" src="assets/imgs/halie-west-25xggax4bSA-unsplash.jpg" alt="">
             <div class="side-bar-logo">
-                <img id="logo-image" src="/Sign-Up-Form/odin-lined.png" alt="">
-                <span class="sidebar-title">ODIN</span>
+                <img id="logo-image" src="assets/imgs/odin-lined.png" alt="">
+                <span class="sidebar-title"> ODIN</span>
             </div>
         </div>
         <div class="form-content">
@@ -22,27 +24,47 @@
                 <br><br>You know you want to 
             </h4>
             <div class="form-container">
-                <form method="POST" id="SignUpForm">
+                <form id="SignUpForm" novalidate>
                     <p style="width:100%;">Let's do this !</p>
-                    <div class="input-div"><label for="fname" >FIRST NAME</label>
-                        <input type="text" id="fname" name="fname" required><span></span></div>
-                    <div class="input-div"> <label for="lname">LAST NAME</label>
-                        <input type="text" id="lname" name="lname"></div>
-                    <div class="input-div"><label for="email" >Email</label>
-                        <input type="email" id="email" name="email" required><span></span>
+                    <div class="input-div"><label for="fname" >FIRST NAME <span class="required">required</span></label>
+                        <input type="text" id="fname" name="fname" required>
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"> <i class="fa-solid fa-circle-check"></i></span>
                     </div>
+
+                    <div class="input-div"> <label for="lname">LAST NAME </label>
+                        <input type="text" id="lname" name="lname">
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"> <i class="fa-solid fa-circle-check"></i></span>
+                    </div>
+
+                    <div class="input-div"><label for="email" >EMAIL eg.(name@example.com)<span class="required">required</span></label>
+                        <input type="email" id="email" name="email" required autocomplete="email" placeholder="name@example.com">
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"> <i class="fa-solid fa-circle-check"></i></span>
+                    </div>
+                    
                     <div class="input-div"> 
-                        <label for="tel">PHONE NUMBER</label>
-                        <input type="tel" id="tel" name="phonenumber" placeholder="+000 0000..." pattern="^\+\d{3}\d+">
+                        <label for="tel">PHONE NUMBER <span class="eg">eg. +123 4567890</span></label>
+                        <input type="tel" id="tel" name="phonenumber" placeholder="+000 0000..." pattern="^\+\d{3}\d+" autocomplete="tel">
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"> <i class="fa-solid fa-circle-check"></i></span>
                     </div>
-                    <div class="input-div"><label for="password1">PASSWORD</label>
-                        <input type="password1" id="password1" name="password1" required>
-                        <span></span>
+
+                    <div class="input-div"><label for="password1">PASSWORD <span class="required">required</span></label>
+                        <input type="password" id="password1" name="password1" required autocomplete="new-password"
+                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$">
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"> <i class="fa-solid fa-circle-check"></i></span>
                     </div>
-                    <div class="input-div"><label for="password2" required>CONFIRM PASSWORD</label>
-                        <input type="password2" id="password2" name="password2" required>
-                        <span></span>
+
+                    <div class="input-div"><label for="password2" required>CONFIRM PASSWORD <span class="required">required</span></label>
+                        <input type="password" id="password2" name="password2" required autocomplete="new-password">
+                        <span class="input-feeback error"></span>
+                        <span class="input-feeback valid"><i class="fa-solid fa-circle-check"></i></span>
                     </div>
+
+                    <p style="width:100%;"></p>
                 </form>
             </div>
            <button type="submit" form="SignUpForm">Create Account</button>
